objects/Roof_Detail_Item__c.object
<CustomObject>
    <description>List of all components that go on a specific roof</description>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>field to save informatica&apos;s integration process update</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Module Record</description>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>RoofDetailItems</relationshipLabel>
        <relationshipName>RoofDetailItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of the item</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Racking Item</description>
        <label>Racking Configuration</label>
        <referenceTo>Racking_Configuration__c</referenceTo>
        <relationshipLabel>RoofDetailItems</relationshipLabel>
        <relationshipName>RoofDetailItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoofDetails__c</fullName>
        <description>Master for the item record</description>
        <label>Roof Details</label>
        <referenceTo>Roof_Details__c</referenceTo>
        <relationshipLabel>RoofDetailItems</relationshipLabel>
        <relationshipName>RoofDetailItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Roof Detail Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Roof Detail Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RoofDetailItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>